Archive2/38/cb161d0a7ad7f0/output
main.cpp: In function 'int main()':
main.cpp:29:51: error: conversion from 'idx<stuff<idxij<0ul, 0ul>, idxij<0ul, 1ul>, idxij<0ul, 2ul>, idxij<0ul, 3ul>, idxij<0ul, 0ul>, idxij<0ul, 1ul> >, 0ul, 0ul>::type {aka stuff<idxij<0ul, 0ul>, idxij<0ul, 1ul>, idxij<0ul, 2ul>, idxij<0ul, 3ul>, idxij<0ul, 0ul>, idxij<0ul, 1ul> >}' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} g_ = idx<stuff<>, 0, 0, 4, 2>::type();
                                                   ^
